--- a/views/pages/info.ejs
+++ b/views/pages/info.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/head') %>
-<body class=" row align-items-center justify-content-center text-secondary">
+<body class=" row align-items-center justify-content-center text-warning">
     <%- include('../partials/tablaInfo'); %>
 </body>
 </html>
