--- a/views/partials/tablaInfo.ejs
+++ b/views/partials/tablaInfo.ejs
@@ -1,12 +1,12 @@
 <div class=" row align-items-center justify-content-center" style="margin-top:3%">
-    <div class="col-sm-4 bg-light border border-secondary rounded shadow p-3 mb-5"> 
+    <div class="col-sm-4 bg-dark border border-warning rounded shadow p-3 mb-5"> 
         <table class="table text-secondary">
             <tr>
                 <td colspan="2">
-                    <h2 class="text-center text-secondary">API INFO</h2>
+                    <h2 class="text-center text-primary">API INFO</h2>
                 </td>
             </tr>
-            <tr>
+            <tr class="text-center text-primary>
                 <td> Argumentos de entrada </td>
                 <td> <%= process.argv.slice(2) %> </td>
             </tr>
