--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/head') %>
-<body class=" row align-items-center justify-content-center text-secondary">
-    <%- include('../partials/loginPartial'); %>
-</body>
-</html>
+
+    <body class=" row align-items-center justify-content-center text-primary">
+        <%- include('../partials/loginPartial'); %>
+    </body>
+
+    </html>
