--- a/views/pages/logout.ejs
+++ b/views/pages/logout.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head') %>
-<body class=" row align-items-center justify-content-center text-secondary">
+<body class=" row align-items-center justify-content-center text-primary">
     <div class=" row align-items-center justify-content-center" style="margin-top:3%">
-        <div class="col-sm-4 bg-light border border-secondary rounded shadow p-3 mb-5"> 
+        <div class="col-sm-4 bg-dark border border-warning rounded shadow p-5 mb-10">
             <h2 class="text-center">Hasta luego</h2>
             <h3 class="text-center"><%= nombre %></h3>
             <meta http-equiv="refresh" content="2;url=/login" />
