--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/head') %>
-<body class=" row align-items-center justify-content-center text-secondary">
+<body class=" row align-items-center justify-content-center text-primary">
     <%- include('../partials/registerPartial'); %>
 </body>
 </html>
