--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -1,6 +1,6 @@
 <div class=" row align-items-center justify-content-center">
-    <div class="col-sm-4 bg-light border border-secondary rounded shadow p-3 mb-5"> 
-        <h2 class="text-center">Centro de Mensajes</h2>
+    <div class="col-sm-4 bg-dark border border-warning shadow p-3 mb-5">
+        <h2 class="text-center text-primary">Centro de Mensajes</h2>
         <form id="formChat">
             <br>
             <input type="email" class="form-control" id="id" placeholder="Email" required>
@@ -17,9 +17,9 @@
             <hr>
             <div id="mensajes"></div>
             <br>
-            <input type="text" class="form-control" id="texto" placeholder="Ingrese mensaje" required>
+            <input type="text" class="form-control" id="texto" placeholder="Raya el cuadro" required>
             <br>
-            <input type='submit' id="btnEnviar" class="btn btn-outline-success" value="enviar"> </input>
+            <input type='submit' id="btnEnviar" class="btn btn-success" value="Enviar"> </input>
         </form>
     </div>
 </div>
