--- a/views/partials/registerPartial.ejs
+++ b/views/partials/registerPartial.ejs
@@ -1,5 +1,5 @@
-<div class=" row align-items-center justify-content-center" style="margin-top:3%">
-    <div class="col-sm-4 bg-light border border-secondary rounded shadow p-3 mb-5"> 
+<div class=" row align-items-center justify-content-center" style="margin-top:7%">
+    <div class="col-sm-4 bg-dark border border-warning shadow p-3 mb-5">
         <h2 class="text-center">Registro de usuario</h2>
         <form id="formChat" action="/register" method="POST">
             <br>
@@ -7,9 +7,9 @@
             <br>
             <input type="password" class="form-control" name="password" placeholder="Password" required>
             <br>
-            <input type='submit' class="btn btn-outline-success" value="Registrar"> </input>
+            <input type='submit' class="btn btn-success" value="Registrar"> </input>
         </form>
         <hr>
-        <a href="/login" class="btn btn-outline-primary">Ir a login</a>
+        <a href="/login" class="btn btn-primary">Ir a login</a>
     </div>
 </div>
