--- a/views/partials/tablaInfo.ejs
+++ b/views/partials/tablaInfo.ejs
@@ -12,6 +12,7 @@
             </tr>
             <tr>
                 <td> Puerto </td>
+                <td> <%= PORT %> </td>
             </tr>
             <tr>
                 <td> Nombre de la plataforma </td>
